new(#36, #35): post qrcode, delete qrcode, get all qrcodes
