# swagger.json
@@ -15,8 +15,8 @@
       "description": "Connect, register or disconnect to application"
     },
     {
-      "name": "QrCode",
-      "description": "Operations about qrcode"
+      "name": "QrCodes",
+      "description": "Operations about qrcodes"
     },
     {
       "name": "Promotions",
@@ -149,35 +149,6 @@
           },
           "400": {
             "description": "Account not registered"
-          }
-        }
-      }
-    },
-    "/qrcodes/scan": {
-      "post": {
-        "summary": "Verify token of qrcode and return his information",
-        "tags": ["QrCode"],
-        "description": "",
-        "security": [
-          {
-            "JWT": []
-          }
-        ],
-        "parameters": [
-          { "name": "token", "in": "body", "type": "string" }
-        ],
-        "responses": {
-          "200": {
-            "description": "QrCode found",
-            "schema": {
-              "$ref": "#/definitions/QrCode"
-            }
-          },
-          "404": {
-            "description": "QrCode not found"
-          },
-          "400": {
-            "description": "Invalid request. Token not found inside body?"
           }
         }
       }
@@ -374,6 +345,108 @@
             "format": "uuid"
           }
         ]
+      }
+    },
+    "/qrcodes": {
+      "get": {
+        "summary": "Get all qrcodes",
+        "description": "",
+        "tags": ["QrCodes"],
+        "responses": {
+          "200": {
+            "description": "List of all qrcodes"
+          },
+          "401": {
+            "description": "You're not connected"
+          },
+          "403": {
+            "description": "You need to be administrator to do this action"
+          }
+        },
+        "security": [{ "JWT": [] }]
+      },
+      "post": {
+        "summary": "Create new qrcode",
+        "description": "",
+        "security": [{ "JWT": [] }],
+        "tags": ["QrCodes"],
+        "responses": {
+          "201": {
+            "description": "QrCode created successfully"
+          },
+          "400": {
+            "description": "Parameters missing"
+          },
+          "401": {
+            "description": "You're not connected"
+          },
+          "403": {
+            "description": "You need to be administrator to do this action"
+          }
+        }
+      }
+    },
+    "/qrcodes/scan": {
+      "post": {
+        "summary": "Verify token of qrcode and return his information",
+        "tags": ["QrCodes"],
+        "description": "",
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "parameters": [
+          { "name": "token", "in": "body", "type": "string" }
+        ],
+        "responses": {
+          "200": {
+            "description": "QrCode found",
+            "schema": {
+              "$ref": "#/definitions/QrCode"
+            }
+          },
+          "404": {
+            "description": "QrCode not found"
+          },
+          "400": {
+            "description": "Invalid request. Token not found inside body?"
+          }
+        }
+      }
+    },
+    "/qrcodes/{id}": {
+      "delete": {
+        "summary": "Delete one qrcode",
+        "description": "",
+        "tags": ["QrCodes"],
+        "parameters": [
+          {
+            "name": "id",
+            "description": "Qrcode unique identifier",
+            "type": "string",
+            "format": "uuid",
+            "in": "query"
+          }
+        ],
+        "security": [{ "JWT": [] }],
+        "responses": {
+          "200": {
+            "description": "Qrcode deleted"
+          },
+          "400": {
+            "description": "Qrcode identifier is not valid"
+          },
+          "404": {
+            "description": "Qrcode not found"
+          },
+          "401": {
+            "description": "You're not connected"
+          },
+          "403": {
+            "description": "You need to be administrator to do this action"
+          }
+        }
       }
     }
   }
